--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="10">
+        android:weightSum="10.3">
         <TextView
             android:id="@+id/img_pager"
             android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/img_pager"
-            android:layout_weight="9.05">
+            android:layout_weight="10.05">
             <com.bosong.commentgallerylib.CommentImageGrid
                 android:id="@+id/comment_grid"
                 android:layout_width="match_parent"
@@ -42,12 +42,12 @@
         <LinearLayout
             android:id="@+id/maingesturelinearlayout_gallery"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:layout_gravity="bottom"
             android:background="#ffffff"
             android:orientation="horizontal"
-            android:layout_weight="0.7"
-            android:weightSum="12">
+            android:layout_weight="0.1"
+            android:weightSum="15">
 
             <LinearLayout
                 android:id="@+id/gesturelinearlayout1_gallery"
@@ -127,6 +127,30 @@
 
             <LinearLayout
                 android:id="@+id/gesturelinearlayout4_gallery"
+                android:layout_width="0dp"
+                android:layout_height="64dp"
+                android:layout_gravity="bottom"
+                android:layout_weight="3"
+                android:background="#ffffff"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:weightSum="10">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="7"
+                    android:src="@drawable/gesture_6_nb" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:text="Go Back" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/gesturelinearlayout5_gallery"
                 android:layout_width="0dp"
                 android:layout_height="64dp"
                 android:layout_gravity="bottom"
