--- a/app/src/main/res/layout/activity_systemcontrol.xml
+++ b/app/src/main/res/layout/activity_systemcontrol.xml
@@ -21,7 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <TextView
             android:id="@+id/emgDataTextView"
             android:layout_width="match_parent"
@@ -60,33 +59,6 @@
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="7"
-                    android:src="@drawable/gesture_1_nb" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="3"
-                    android:textColor="@color/FontColor"
-                    android:textStyle="bold"
-                    android:gravity="center"
-                    android:text="Wi-fi" />
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/gesturelinearlayout2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:background="@color/BackgroundColor"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:weightSum="10">
-
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
@@ -101,6 +73,33 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:text="Volume Down" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/gesturelinearlayout2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:background="@color/BackgroundColor"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:weightSum="10">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="7"
+                    android:src="@drawable/gesture_3_nb" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:textColor="@color/FontColor"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:text="Volume Up" />
+
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -125,7 +124,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="7"
-                    android:src="@drawable/gesture_3_nb" />
+                    android:src="@drawable/gesture_1_nb" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -134,7 +133,8 @@
                     android:textColor="@color/FontColor"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:text="Volume Up" />
+                    android:text="Screen Darker" />
+
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/gesturelinearlayout4"
@@ -160,7 +160,7 @@
                     android:textColor="@color/FontColor"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:text="Sound - Vibrate" />
+                    android:text="Screen Brighter" />
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -180,13 +180,12 @@
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
-
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="7"
 
-                    android:src="@drawable/gesture_5_nb" />
+                    android:src="@drawable/gesture_6_nb" />
 
 
                 <TextView
@@ -196,7 +195,8 @@
                     android:textColor="@color/FontColor"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:text="Screen Brighter" />
+                    android:text="Go Back" />
+
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/gesturelinearlayout6"
@@ -213,9 +213,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="7"
-
-                    android:src="@drawable/gesture_6_nb" />
-
+                    android:src="@drawable/gesture_5_nb" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -224,7 +222,8 @@
                     android:textColor="@color/FontColor"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:text="Screen Darker " />
+                    android:text="Hold" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
