Change Word "hold" to "unlock" , tutorial activity fixed

--- a/app/src/main/res/layout/activity_systemcontrol.xml
+++ b/app/src/main/res/layout/activity_systemcontrol.xml
@@ -222,7 +222,7 @@
                     android:textColor="@color/FontColor"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:text="Hold" />
+                    android:text="Unlock" />
 
             </LinearLayout>
         </LinearLayout>
