--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -276,7 +276,7 @@ android:layout_height="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:gravity="center"
-                    android:text="Hold" />
+                    android:text="Unlock" />
             </LinearLayout>
 
         </LinearLayout>
