--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -160,7 +160,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:text="Hold" />
+                android:text="Unlock" />
 
         </LinearLayout>
     </LinearLayout>
