--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -25,5 +25,5 @@
         android:entryValues="@array/recognizing_count"
         android:title="제스처 인식 주기" />
 
-    <PreferenceCategory android:title="제스처 인식 주기는 블루투스 연결 도중에 변경 불가능 합니다."/>
+    <PreferenceCategory android:title="제스처 인식 주기를 짧게 설정할수록 빠른 인식이 가능하지만 정확도는 떨어질 수 있습니다."/>
 </PreferenceScreen>
