Add TestPageActivty, detail Preference_Vibrate_Option, fix Interlocking error, keep screen on in galleryactivity

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,6 +21,10 @@
             android:id="@+id/nav_settigns"
             android:icon="@drawable/ic_menu_manage"
             android:title="Settings" />
+        <item
+            android:id="@+id/nav_test"
+            android:icon="@drawable/ic_menu_test"
+            android:title="Test" />
     </group>
 
     <!--<item android:title="Communicate">-->
