--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,6 +7,9 @@
     </string-array>
 
     <string-array name="recognizing_count">
+        <item>100</item>
+        <item>70</item>
+        <item>60</item>
         <item>50</item>
         <item>40</item>
         <item>30</item>
