--- a/app/src/main/res/layout/music_activity_main.xml
+++ b/app/src/main/res/layout/music_activity_main.xml
@@ -133,19 +133,19 @@
                     android:orientation="vertical"
                     android:weightSum="10">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="2dp"
-                        android:layout_weight="7"
-                        android:src="@drawable/gesture_4_nb" />
+                    <!--<ImageView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="2dp"-->
+                        <!--android:layout_weight="7"-->
+                        <!--android:src="@drawable/gesture_4_nb" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_weight="3"
-                        android:gravity="center"
-                        android:text="Go Back"
-                        android:textSize="9sp" />
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="0dp"-->
+                        <!--android:layout_weight="3"-->
+                        <!--android:gravity="center"-->
+                        <!--android:text="Go Back"-->
+                        <!--android:textSize="9sp" />-->
                 </LinearLayout>
 
             </LinearLayout>
@@ -202,7 +202,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="3"
                         android:gravity="center"
-                        android:text="Music Unlock"
+                        android:text="Go Back"
                         android:textSize="8sp" />
 
                 </LinearLayout>
