--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -33,7 +33,13 @@
         android:entryValues="@array/vibrate_power"
         android:title="연결 진동 세기"
         android:dependency="vibrate"/>
-
+    <ListPreference
+        android:defaultValue="8"
+        android:entries="@array/recognizing_lock_count"
+        android:summary="8"
+        android:key="recognizing_lock_count"
+        android:entryValues="@array/recognizing_lock_count"
+        android:title="인식 잠금 시간(초)" />
 
     <ListPreference
         android:defaultValue="50"
@@ -41,7 +47,7 @@
         android:summary="50"
         android:key="recognizing_count"
         android:entryValues="@array/recognizing_count"
-        android:title="제스처 인식 주기" />
+        android:title="제스처 인식 주기(1/60초)" />
 
     <PreferenceCategory android:title="제스처 인식 주기를 짧게 설정할수록 빠른 인식이 가능하지만 정확도는 떨어질 수 있습니다."/>
 </PreferenceScreen>
